--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "vosk-lib",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "description": "Vosk library for node, with type defenitions and multi-arch support.",
     "keywords": [
         "speech",
@@ -54,5 +54,13 @@
         "typedoc": "^0.23.10",
         "typescript": "^4.7.4",
         "vosk-lib": "workspace:*"
+    },
+    "homepage": "https://github.com/JacobLinCool/vosk-lib#readme",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/JacobLinCool/vosk-lib.git"
+    },
+    "bugs": {
+        "url": "https://github.com/JacobLinCool/vosk-lib/issues"
     }
 }
